--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 15px;
     border-radius: 15px;
-    width: 20%;
+    width: 80%; /* Ajuste a largura para 80% da largura da tela */
+    max-width: 400px; /* Define uma largura máxima */
 }
 
 fieldset {
@@ -65,13 +66,10 @@ select.Estado {
     border-radius: 8px;
     outline: none;
     font-size: 14px;
-    width: 40%;
+    width: 100%; /* Largura total */
     margin-top: 10px;
     font-family: Lexend;
     text-align: center;
-    align-items: center;
-    margin: 0 auto;
-    display: block;
 }
 
 select.Estado::-ms-expand {
@@ -103,4 +101,11 @@ select.Estado:focus {
 
 #submit:hover {
     background-image: linear-gradient(to right,rgb(0, 80, 172), rgb(80, 19, 195));
+}
+
+/* Media query para telas menores */
+@media screen and (max-width: 600px) {
+    .box {
+        width: 90%; /* Reduz a largura para 90% da largura da tela */
+    }
 }
